# Argos

./: .env.example  .gitignore  AGENT_MSI_IMPLEMENTATION_PLAN.md  FILENAME_FIX.md  FRONTEND_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PHASE5_COMPLETE.md  README.md  TESTING_INSTRUCTIONS.md  TEST_AGENT_INSTRUCTIONS.md  UI_COMPLETE.md  WORKFLOW_TEST_REPORT.md  test_agent.py  test_agent_s18nzd4.py  test_auth.py  test_db_connection.py  test_platform_admin.py
Phases/: AGENT_TEST_REPORT.md  AGENT_TEST_RESULTS.md  CHECKLIST.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  WORKFLOW_COMPLETE.md  idea.txt  prompt.txt
PrismTrackAgent/: README.md  api_client.py  build_exe.py  config.json  config.py  idle_detection.py  main.py  registration.py  system_info.py  tracking.py
backend/: __init__.py  main.py
backend/api/v1/: __init__.py
backend/core/: config.py  database.py  dependencies.py  security.py  utils.py
backend/models/: __init__.py  agent.py  branch.py  company.py  platform_admin.py  telemetry.py  tenant.py  user.py
backend/schemas/: agent.py  auth.py  branch.py  company.py  platform_admin.py  tenant.py  user.py
backend/static/agents/: README.md
database/: schema.sql
frontend/: README.md  index.html
frontend/js/: api.js  app.js
installer/: .gitignore  Cargo.toml  README.md  create_msi.py  installer_script.ps1
installer/src/: main.rs
installer/wix/: main.wxs
scripts/: README_MIGRATIONS.md  create_admin.py  migrate_database.py  restart_backend.py
test script/: test_api.py  test_tenant_admin.py
(+4 files in other folders)
